--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.mydiv:hover {
+  overflow: auto;
+}
+
+.mydiv {
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+  overflow: auto;
+  height: 1px;
+
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(116, 111, 111);
+  height: 4px;
+  border-radius: 5px;
+
+}
