--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,52 @@ code {
   border-radius: 5px;
 
 }
+
+
+.checkbox {
+  opacity: 0;
+  /* position: absolute; */
+}
+
+.label {
+  border: 1px solid #111;
+  width: 50px;
+  height: 22px;
+  background-color: #111;
+  display: flex;
+  border-radius: 50px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  position: relative;
+  transform: scale(1.5);
+}
+
+.ball {
+  width: 18px;
+  height: 18px;
+  background-color: white;
+  position: absolute;
+  top: 1px;
+  left: 3px;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+}
+
+/*  target the elemenent after the label*/
+.checkbox:checked+.label .ball {
+  transform: translateX(24px);
+}
+
+
+.bx-sun {
+  color: yellow;
+}
+
+.bx-moon {
+  color: pink;
+}
+
+.bx-user {
+  font-weight: bold;
+}
